--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,9 +79,6 @@ jobs:
           if [ -f build/zephyr/zmk.uf2 ]
           then
             cp build/zephyr/zmk.uf2 "build/artifacts/${{ steps.variables.outputs.artifact-name }}.uf2"
-          elif [ -f build/zephyr/zmk.hex ]
-          then
-            cp build/zephyr/zmk.hex "build/artifacts/${{ steps.variables.outputs.artifact-name }}.hex"
           elif [ -f build/zephyr/zmk.bin ]
             cp build/zephyr/zmk.hex "build/artifacts/${{ steps.variables.outputs.artifact-name }}.bin"
           fi
@@ -89,4 +86,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: build/artifacts
+          path: build/artifact
