Add PR to add RGB

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,12 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: boards/bdn9-rev2-rgb
+      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: petejohanson
+      revision: boards/bdn9-rev2-rgb
       import: app/west.yml
   self:
     path: config
