updated west.yml to origin

--- a/config/bdn9_rev2.conf
+++ b/config/bdn9_rev2.conf
@@ -1,4 +1,7 @@
-# Put configuration options here
+# Put configuration options here #
+##################################
+## Enable Encoders
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+## Enable RGB
 CONFIG_ZMK_RGB_UNDERGLOW=y
