--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,10 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: petejohanson
-      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
-      remote: petejohanson
-      revision: boards/bdn9-rev2-rgb
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
