--- a/config/bdn9_rev2.conf
+++ b/config/bdn9_rev2.conf
@@ -3,5 +3,7 @@
 ## Enable Encoders
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-## Enable RGB
+## Enable RGB and setting brightness and effects
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=4
