updated rgb setting to 50% BRI and Swirl Effect

--- a/config/bdn9_rev2.conf
+++ b/config/bdn9_rev2.conf
@@ -3,7 +3,7 @@
 ## Enable Encoders
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-## Enable RGB and setting brightness and effects
+## Enable RGB and setting brightness and effect to Swirl
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=4
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
