--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,12 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: sensor-test
+      url-base: https://github.com/nickconway
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: sensor-test
+      revision: generic-encoder-bind
       import: app/west.yml
   self:
     path: config
